# azure_vault_file_upload

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  run_app.bat  run_app.sh
src/: auth.rs  config.rs  main.rs  vault.rs
